compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__public_local_function_calls.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"m\", \"f\")\npub fn go(x x: Int, y y: Int) -> Int\npub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }\n"
---
----- SOURCE CODE

@external(erlang, "m", "f")
pub fn go(x x: Int, y y: Int) -> Int
pub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/2, x/0]).

-file("project/test/my/mod.gleam", 3).
-spec go(integer(), integer()) -> integer().
go(X, Y) ->
    m:f(X, Y).

-file("project/test/my/mod.gleam", 4).
-spec x() -> integer().
x() ->
    m:f(1, 2),
m:f(4, 3).
